grammar.txt
Goal : (program ";")* program ";";

program : typeDec | assignment ;

typeDec : ("type int" ident ("," ident)* ";");

assignment : (ident "=") expr ;

expr : term (( "+" | "-" ) term)* ;

term : factor (( "*" | "/") factor)* ;

factor : ident | number | "(" expr ")" ;

ident : ([a-zAZ])+ ;

number : ([0-9])+ ;
